# gpsp-bot

./: .containerignore  .woodpecker.yml  CHAIN_ARCHITECTURE.md  Cargo.toml  Containerfile  Containerfile_arm  Dockerfile  Jenkinsfile  README.md  captain-definition  go.mod  go.sum  gpsp-bot.go  main.go
.github/workflows/: rust.yml
.woodpecker/: dev.yml  main.yml
cmd/discord/: main.go
cmd/gpsp-bot/: main.go
cmd/gpsp-bot-telegram/: bot.go
internal/chain/: chain.go
internal/config/: env.go
internal/handlers/: construct_text_response_handler.go  context.go  delete_downloaded_video_handler.go  delete_marked_message_handler.go  end_of_chain_handler.go  euribor_handler.go  generic_message_handler.go  hyvasuomi_response_handler.go  image_response_handler.go  mark_for_deletion_handler.go  mark_for_nagging_handler.go  on_text_handler.go  text_response_handler.go  tuplilla_response_handler.go  typing_handler.go  url_parsing_handler.go  utils.go  video_cut_args_handler.go  video_download_handler.go  video_postprocessing_handler.go  video_response_handler.go
internal/repository/: database.go
pkg/utils/: apivideo.go  euribor.go  llm_util.go  misc.go  video_downloader.go
src/: bot_commands.rs  main.rs  telegram_client.rs  util.rs
