[package]
name = "gpsp-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
json = "0.12.4"
reqwest = { version = "0.11.17", features = ["blocking","multipart","json","stream"] }
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
uuid = { version = "1.3.2", features = ["v4", "fast-rng"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
anyhow = "1.0.71"
serde_json = "1.0.96"
openssl = { version = "0.10", features = ["vendored"] }
regex = "1.5"
